Clarified the answer to question 3 a bit more.

--- a/Understanding neural networks.ipynb
+++ b/Understanding neural networks.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6f18b110",
    "metadata": {},
@@ -213,7 +212,7 @@
     "\n",
     "2. To be honest, if you never thought about this, the question on how it will generalize can be intimidating. However, if you also perform the 3rd assignment, you may a next time give the following answer. With the ReLU activation function, the fitted function will go up in a straight line at the borders of the region. Eventually, this means that the neural network will be underestimating the quadratic function. With the tanh function, the network will almost immediately underestimate the quadratic function, as it is typically already summing up the functions in their saturated parts.\n",
     "\n",
-    "3. A  main thing to realize is that it is most informative not to plot the activations (weighted sums) nor the hiddens' output activations, but each hidden's output multiplied with its weight that leads to the output neuron. The output neuron simply outputs a weighted sum of the hiddens plus a bias term. Hence, the generalization beyond the training range is directly determined by the basic shapes of the hidden activation function. Since the quadratic function goes up both towards more positive and more negative numbers, some neurons have to focus on capturing the slope on the negative side, and others on the capturing the slope on the positive side. Which side a hidden neuron covers is determined by the input weights. Showing these hidden \"basis functions\" also immediately allows for predictions outside of the training range."
+    "3. A  main thing to realize is that it is most informative not to plot the activations (weighted sums $a_j = \\sum_i w_{i,j} x_i$) nor the hiddens' output activations ($h_j = f(a_j)$), but each hidden's output multiplied with its weight that leads to the output neuron ($w_j h_j$, or in the code below `weights[0][i] * hidden_outputs[:, i]`). The output neuron simply outputs a weighted sum of the hiddens plus a bias term. Hence, the generalization beyond the training range is directly determined by the basic shapes of the hidden activation function. Since the quadratic function goes up both towards more positive and more negative numbers, some neurons have to focus on capturing the slope on the negative side, and others on the capturing the slope on the positive side. Which side a hidden neuron covers is determined by the input weights. Showing these hidden \"basis functions\" also immediately allows for predictions outside of the training range."
    ]
   },
   {
